major fit progress, things are working out now

--- a/background.tex
+++ b/background.tex
@@ -178,6 +178,7 @@ As for the direct measurements in the control region, the observed deviations of
 \end{figure} 
 
 \subsection{Combined correction factors and resulting background estimates}
+\label{sec:combinedRSFOF}
 An overview of the resulting corrections factors of the measurement in the control region and the factorization method are shown in Table~\ref{tab:combinedRSFOF}. In all cases the results of the two methods agree very well within their uncertainties. Given the fact that they are performed on exclusive datasets and under the assumption that their uncertainties follow a Gaussian distribution, which is justified by the fact that they are either statistical in nature or assigned to cover statistical fluctuations in the dependency studies of \rmue and $R_T$, they can be combined using a weighted average. 
 \input{tab/table_rSFOF_combination_result.tex} 
 A precision of about 4\% and 6\% on the translation from opposite flavour to same flavour is reached in the central and forward dilepton selection, respectively. Separating the lepton flavours, the uncertainty in \Reeof and \Rmmof is about 6\% for central and 9-10\% for forward leptons. This increase is caused by the missing cancellation of the uncertainty on \rmue and the increased statistical uncertainty in the direct measurement in the control region. Given that the weighted average is calculated separately for each flavour combination, \Reeof and \Rmmof do not add up exactly to \Rsfof, which in turn means that the sum of the background estimates for flavour-symmetric backgrounds in the \EE and \MM channels does not equal that in the SF channel. The OF yields in the \mll bins of the counting experiment together with the resulting background estimates in the different dilepton channels are shown in Table~\ref{tab:FlavSymBackgrounds}. 
@@ -320,6 +321,3 @@ The predictions for the on-\Z region from the \JZB and \MET templates methods ag
 
 
 
-
-
-\section{Search for a kinematic edge with a fit}
