--- a/results.tex
+++ b/results.tex
@@ -1,4 +1,5 @@
-\section{Result of the counting experiment}
+\section{Results and further studies}
+\label{sec:candcresults}
 The distribution of the dilepton invariant mass in the central and forward signal regions are shown in Figure~\ref{fig:resultsCC}. The resulting event yields are compared to the expectation from SM backgrounds in Table~\ref{tab:METresults2012}. A maximum likelihood fit is performed in each region to find the best estimator for the for the difference of expected and observed yield. The significances of deviations of this difference from zero are evaluated using the profile likelihood ratio of the signal and signal+background hypothesis~\cite{HiggsTool1}. In general, the observed data is in agreement with the background estimation within about one standard deviation, except for the low-mass region in the central dilepton selection. Here the observed yield exceeds the expectation by $109^{+48}_{-49}$ events. The size of this excess corresponds to a significance of 2.2~$\sigma$.  
 \begin{figure}[htbp]
 \centering
@@ -66,4 +67,4 @@ In the Tables~\ref{tab:METresults2012MM} and~\ref{tab:METresults2012EE}, the res
 \end{figure}
 
 
-\section{Result of the search for a kinematic edge}
+\input{interpretation}
