--- a/thesis.bib
+++ b/thesis.bib
@@ -885,3 +885,177 @@ language={English}
       reportNumber   = "CERN-PH-EP-2013-213",
       SLACcitation   = "%%CITATION = ARXIV:1311.6736;%%",
 }
+
+@article{Schomakers:2014zza,
+      author         = "Schomakers, Christian",
+      title          = "{Studies of simplified models and projection to
+                        $\sqrt{s}$=13 TeV for the CMS SUSY dilepton edge search}",
+      reportNumber   = "CERN-THESIS-2014-142, CMS-TS-2014-030",
+      SLACcitation   = "%%CITATION = CERN-THESIS-2014-142 ETC.;%%",
+}
+
+
+@ARTICLE{bib-nlo-nll-01,
+  AUTHOR       = {Beenakker, Wim and H{\"o}pker, R. and Spira, M. and Zerwas, P. M.},
+  TITLE        = {Squark and gluino production at hadron colliders},
+  JOURNAL      = "Nucl. Phys. B",
+  VOLUME       = "492",
+  YEAR         = "1997",
+  pages        = "51",
+      eprint         = "hep-ph/9610490",
+      archivePrefix  = "arXiv",  
+  doi          = "10.1016/S0550-3213(97)00084-9",
+  SLACcitation   = "%%CITATION = HEP-PH/9610490;%%"
+}
+@ARTICLE{bib-nlo-nll-02,
+  author         = "Kulesza, Anna and Motyka, L.",
+  title          = "{Threshold resummation for squark-antisquark and
+                     gluino-pair production at the {LHC}}",
+  journal        = "Phys. Rev. Lett.",
+  volume         = "102",
+  pages          = "111802",
+  year           = "2009",
+      eprint         = "0807.2405",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",    
+  doi            = "10.1103/PhysRevLett.102.111802",
+  SLACcitation   = "%%CITATION = ARXIV:0807.2405;%%"
+}
+@ARTICLE{bib-nlo-nll-03,
+  author         = "Kulesza, Anna and Motyka, L.",
+  title          = "{Soft gluon resummation for the production of
+                     gluino-gluino and squark-antisquark pairs at the {LHC}}",
+  journal        = "Phys. Rev. D",
+  volume         = "80",
+  pages          = "095004",
+  year           = "2009",
+      eprint         = "0905.4749",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",  
+  doi            = "10.1103/PhysRevD.80.095004",
+  SLACcitation   = "%%CITATION = ARXIV:0905.4749;%%"
+}
+@ARTICLE{bib-nlo-nll-04,
+  author         = {Beenakker, Wim and Brensing, Silja and Kr{\"a}mer, Michael
+                    and Kulesza, Anna and Laenen, Eric and Niessen, Irene},
+  title          = "{Soft-gluon resummation for squark and gluino hadroproduction}",
+  JOURNAL        = {JHEP},
+  volume         = "12",
+  pages          = "041",
+  year           = "2009",
+      eprint         = "0909.4418",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",  
+  doi            = "10.1088/1126-6708/2009/12/041",
+  SLACcitation   = "%%CITATION = ARXIV:0909.4418;%%"
+}
+@ARTICLE{bib-nlo-nll-05,
+  author         = {Beenakker, Wim and Brensing, Silja and Kr{\"a}mer, Michael and
+                    Kulesza, Anna and Laenen, Eric and Motyka, Leszek and Niessen, Irene},
+  title          = "{Squark and gluino hadroproduction}",
+  journal        = "Int. J. Mod. Phys. A",
+  volume         = "26",
+  pages          = "2637",
+  year           = "2011",
+      eprint         = "1105.1110",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",  
+  doi            = "10.1142/S0217751X11053560",
+  SLACcitation   = "%%CITATION = ARXIV:1105.1110;%%"
+}
+@unpublished{ref:xsec,
+      author         = "Kr{\"a}mer, Michael and Kulesza, Anna and van der Leeuw,
+                        Robin and Mangano, Michelangelo and Padhi, Sanjay and
+                        Plehn, Tilman and Portell, Xavier",
+      title          = "{Supersymmetry production cross sections in pp collisions
+                        at $\sqrt{s}$ = 7~TeV}",
+      year           = "2012",
+      eprint         = "1206.2892",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2012-163",
+      SLACcitation   = "%%CITATION = ARXIV:1206.2892;%%",
+}
+
+@article{Chatrchyan:2013xna,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for top-squark pair production in the
+                        single-lepton final state in pp collisions at $\sqrt{s}$ =
+                        8 TeV}",
+      collaboration  = "CMS",
+      journal        = "Eur .Phys. J. C",
+      volume         = "73",
+      pages          = "2677",
+      doi            = "10.1140/epjc/s10052-013-2677-2",
+      year           = "2013",
+      eprint         = "1308.1586",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-13-011, CERN-PH-EP-2013-148",
+      SLACcitation   = "%%CITATION = ARXIV:1308.1586;%%",
+}
+
+@article{CMS-PAS-LUM-13-001,
+      AUTHOR        = "{CMS Collaboration}",
+      TITLE         = "{CMS Luminosity Based on Pixel Cluster Counting - Summer
+                       2013 Update}",
+      COLLABORATION = "CMS",
+      JOURNAL		= "CMS Physics Analysis Summary",
+      PAGES		= "CMS-PAS-LUM-13-001 (2013)",
+     
+}
+
+@unpublished{Alekhin:2011sk,
+      author         = "Alekhin, Sergey and Alioli, Simone and Ball, Richard D.
+                        and Bertone, Valerio and Blumlein, Johannes and others",
+      title          = "{The PDF4LHC Working Group Interim Report}",
+      year           = "2011",
+      eprint         = "1101.0536",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1101.0536;%%",
+}
+
+@unpublished{Botje:2011sn,
+      author         = "Botje, Michiel and Butterworth, Jon and Cooper-Sarkar,
+                        Amanda and de Roeck, Albert and Feltesse, Joel and others",
+      title          = "{The PDF4LHC Working Group Interim Recommendations}",
+      year           = "2011",
+      eprint         = "1101.0538",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1101.0538;%%",
+}
+
+@Article{Crystal,
+      author         = "{M. Oreglia}",
+      title          = "{A study of the reactions $\psi^{\prime} \rightarrow \gamma \gamma \psi$}",
+      journal        = "{Ph.D. thesis, Stanford University, SLAC Report SLAC-R-236}",
+      year           = "{1980}",
+      url            = "{http://www.slac.stanford.edu/pubs/slacreports/slac-r-236.html}"
+      
+}
+
+@article{kernelDensity,
+  author={Cranmer, Kyle S.},
+  title={\em Kernel estimation in high-energy physics},
+  journal={Comput.Phys.Commun.},
+  volume={136},
+  pages={98-207},
+  year={2001},
+}
+
+@article{edge2011,
+      author = "Chatrchyan, Serguei and others",
+      title  = "{Search for new physics in events with opposite-sign leptons, jets, and missing transverse energy in pp collisions at $\sqrt{s} = 7$ TeV}",
+      collaboration  = "CMS",
+      journal= "Phys. Lett. B",
+      volume = "718",
+      pages  = "815",
+      year = "2013",
+      issn = "0370-2693",
+      eprint         = "1206.3949",
+      archivePrefix  = "arXiv",      
+      doi = "10.1016/j.physletb.2012.11.036",
+      url = "http://www.sciencedirect.com/science/article/pii/S0370269312012014",
+}
