--- a/thesis.tex
+++ b/thesis.tex
@@ -132,6 +132,7 @@
 
 %PAS things
 \newcommand{\Ht}{\HT}
+\newcommand{\HT}{\ensuremath{H_\mathrm{T}}\xspace}
 \newcommand{\Met}{\MET}
 \newcommand{\MET}{\ensuremath{E_{\mathrm{T}}^{\mathrm{miss}}}\xspace}
 \newcommand{\METVec}{\ensuremath{\vec{E}_{\mathrm{T}}^{\mathrm{miss}}}\xspace}
@@ -173,8 +174,8 @@
 \newcommand{\OFSBJZBNEG}{\ensuremath{{\color{OFSB} \textrm{JZB}^\mathrm{OFSB}_\mathrm{neg}}}}
 \newcommand{\OFSBJZBPOS}{\ensuremath{{\color{OFSB} \textrm{JZB}^\mathrm{OFSB}_\mathrm{pos}}}}
 
-\newcommand{\secondchi}{\ensuremath{{\tilde{\chi}^2_0}}\xspace}
-\newcommand{\firstchi}{\ensuremath{{\tilde{\chi}^1_0}}\xspace}
+\newcommand{\secondchi}{\ensuremath{{\tilde{\chi}^0_2}}\xspace}
+\newcommand{\firstchi}{\ensuremath{{\tilde{\chi}^0_1}}\xspace}
 \newcommand{\sbottom}{\ensuremath{\tilde{b}}\xspace}
 \newcommand{\slepton}{\ensuremath{\tilde{l}}\xspace}
 
@@ -243,7 +244,7 @@
 \chapter{Estimation of Standard Model backgrounds}
 \input{background}
 
-\chapter{Results}
+\chapter{Results of the counting experiment}
 \input{results}
 %\chapter{Efficiencies for \Wprime searches}
 %\input{TP}
@@ -251,8 +252,8 @@
 %\input{systematics}
 %\chapter{Background Estimation}
 %\input{BackgroundFit}
-\chapter{Interpretation in simplified models}
-\input{interpretation}
+\chapter{Search for an kinematic edge}
+\input{fit}
 \chapter{Outlook to LHC Run II}
 \chapter{Conclusion}
 %\input{conclusion}
