--- a/interpretation.tex
+++ b/interpretation.tex
@@ -1,3 +1,87 @@
-\section{Simplified Models for Supersymmetric Signatures}
-\section{The T6bblledge and T6bbslepton model}
-\section{Interpretation of the counting experiment in simplified models}
+\section{Interpretation in simplified models}
+The absence of a clear indication for the existence of SUSY in the results of the counting experiment presented in section~\ref{sec:candcresults} constrains the validity of supersymmetric models. To quantify the impact these results have on the allowed parameter space, they are interpreted in specific signal scenarios. For this two ``simplified models'' are used that have been developed for this purpose by Christian Schomakers in the context of his master thesis~\cite{Schomakers:2014zza}. In this kind of models, only the subset of sparticles relevant to the studied signature is assumed to be accessible at LHC energies. Also, the branching fractions of the sparticle decays are chosen to produce the desired signature and are often set to 100\%. As the interpretation presented here closely follows the procedures developed to obtain the existing results, only a short description is given.   
+\subsection{``Fixed-edge'' and ``slepton-edge'' models}
+In the design of the simplified models, the properties of the excess observed a low invariant masses are used as the guiding principle. As the excess is observed at relatively low values of \HT, the mass of the initially produced sparticles also has to be rather small. Pair production of third generation squarks allows to evade the existing limits on the masses of the gluino and first and second generation squarks. This choice is further motivated by the presence of at least one b-tagged jets in the events of the excess. Bottom squarks are chosen to avoid the larger multiplicity of final state particles associated with the production of top quarks in the decays of stop quarks. 
+
+The bottom squarks decay into a bottom quark and a \secondchi with a branching fraction of 100\%. The decays of the \secondchi differ between the two models. In the ``fixed-edge'' model, it decays into an off-shell Z boson and a \firstchi in 100\% of the cases. The Z boson decays with its SM branching ratios, producing light leptons in about 7\% of the cases. The $m_{\sbottom}$-$m_{\secondchi}$-plane is scanned, varying the masses of the two particles in steps of 25\GeV. The mass of the \firstchi is fixed to be 70\GeV below that of the \secondchi to produce an edge in the \mll spectrum at this value. Therefore this model is specifically suited to study the excess observed in the low-mass region. 
+
+As a mass difference between the two neutralinos larger than the Z boson mass would only result in the production of on-shell Z bosons in this model, the ``slepton-edge'' model introduces selectrons and smuons as additional new particles. The mass of these sleptons is assumed to be degenerate and set to lie halfway between the two neutralinos: $m_{\slepton} = m_{\firstchi} + 0.5(m_{\secondchi}-m_{\firstchi})$. The branching fractions of the \secondchi are chosen such that the decay in an off- or on-shell Z boson or a slepton and a lepton occur with 50\% probability each. The Z boson again decays according to its SM branching fraction while the slepton always decays into a lepton and the \firstchi. Again the $m_{\sbottom}$-$m_{\secondchi}$-plane is scanned in steps of 25\GeV, while the $m_{\firstchi}$ is set to be 100\GeV, allowing for edges in the \mll spectrum also above the Z boson mass. 
+The signal simulation is normalized to theory cross sections calculated at NLO in $\alpha_s$, including the leading logarithmic contributions of the next higher order~\cite{bib-nlo-nll-01,bib-nlo-nll-02,bib-nlo-nll-03,bib-nlo-nll-04,bib-nlo-nll-05,ref:xsec}.     
+\subsubsection{Selection efficiencies}
+The impact of branching fractions, detector acceptance, and selection efficiencies on the different signal points is shown in Figure~\ref{fig:sigEff} for the example of the central signal region for the fixed-edge (left) and slepton-edge (right) models. Because of the much larger branching fraction into lepton pairs in the case of the slepton-edge model, the overall acceptance$\times$efficiency is an order of magnitude larger in this case. As the event kinematics vary strongly depending on the sparticle masses, the efficiency strongly depends on the position of the signal point in the $m_{\sbottom}$-$m_{\secondchi}$ plane. In general, the efficiency is low along the diagonal, where little energy is available for the decay products. Another notable feature is a decrease in efficiency around \secondchi masses of about $\unit{225}{\giga\electronvolt}$ in the case of the slepton-edge model. This is caused by the gaps in the signal acceptance between the three invariant mass regions of the counting experiment. No such effect is visible for the fixed-edge case because the signal is concentrated in the low-mass region in this model.  
+\begin{figure}[htbp]
+\centering
+\begin{minipage}[t]{0.49\textwidth}
+  \includegraphics[width=\textwidth]{plots/limits/T6bblledge_70_GeV_Edge_Endcap_lowMll_signalEfficiency.pdf}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
+\includegraphics[width=\textwidth]{plots/limits/T6bbllslepton_m_n_1_100_Barrel_signalEfficiency_Reweighted.pdf}
+\end{minipage}
+\caption{Signal acceptance$\times$efficiency in the $m_{\sbottom}$-$m_{\secondchi}$ plane for the fixed-edge (left) and slepton-edge (right) model for the central signal region.}
+\label{fig:sigEff}
+\end{figure}
+\subsubsection{Systematic uncertainties}
+A variety of systematic uncertainties in the signal modelling have to taken into account. The integrated luminosity is measured with a precision of 2.6\%~\cite{CMS-PAS-LUM-13-001}. Variations of the parton distribution functions (PDF) according to the PDF4LHC recommendations~\cite{Alekhin:2011sk,Botje:2011sn,Ball:2012cx,Martin:2009iq,Lai:2010vv} result in an uncertainty of 0--6\% in the signal acceptance. Uncertainties related to lepton efficiencies are of the size of 1\% per lepton. Furthermore, the corrections of the lepton efficiency differences between fast and full detector simulation amount to another 1\% per lepton. The dilepton trigger efficiencies are measured with a precision of 5\%, as described in section~\ref{sec:triggerEffs}. Uncertainties on the muon momentum scale have negligible impact on the signal acceptance, whereas the uncertainty in the electron energy scale is 0.6\% for central and 1.5\% for forward leptons. Jet energy scale uncertainties~\cite{1748-0221-6-11-P11002} result in an uncertainty in the signal yield of 0--8\%. The uncertainties in the modeling of the objects in the events are propagated to the \MET measurements, resulting in and uncertainty in the signal acceptance of 0--8\%. Here the contributions from the jet energy scale uncertainties are dominant. 
+Uncertainties in the modeling of initial-state radiation (ISR)~\cite{Chatrchyan:2013xna} are propagated to the event selection and result in an uncertainty of 0--14\% in the signal yield.
+The uncertainty associated with pileup reweighting is evaluated by shifting the inelastic cross section by $\pm5\%$, resulting in an uncertainty on the signal acceptance of about 1\%. The uncertainties are summarized in Table~\ref{tab:sysUncerts}.
+
+\begin{table}
+\begin{center}
+\caption{Summary of systematic uncertainties for the signal efficiency.}
+\label{tab:sysUncerts}
+\begin{tabular}{l|c}
+\hline \hline
+Uncertainty source & Impact on signal yield [\%]\\ \hline 
+Luminosity & 2.6 \\
+PDFs on acceptance & 0--6 \\ 
+Lepton identification/isolation & 2\\
+Fast simulation lepton identification/isolation & 2 \\
+Dilepton trigger & 5 \\
+Lepton energy scale & 0--5  \\
+\MET & 0--8  \\
+Jet energy scale/resolution & 0--8  \\
+ISR modeling & 0--14 \\
+Additional interactions & 1 \\
+\hline
+\hline
+%\multicolumn{2}{c}{Theoretical Uncertainties}\\
+%\hline
+%Fact./Renorm. Scale and PDFs& 14-18   \\
+\end{tabular}
+\end{center}
+\end{table}
+The combined systematic uncertainties are shown in Figure~\ref{fig:sys}. For the most part of the $m_{\sbottom}$-$m_{\secondchi}$ plane it ranges from 5-7\%. However, close to the diagonal this increases, caused by a larger impact of JES and ISR uncertainties. This is due to the overall lower jet \pt in this region, increasing the probability for threshold effects around the jet \pt requirement of $\unit{40}{\giga\electronvolt}$. The largest uncertainties are observed for both low masses of the \sbottom and \secondchi, exceeding 20\% for the fixed-edge model and   reaching 15\% for the slepton-edge model.
+\begin{figure}[htbp]
+\centering
+\begin{minipage}[t]{0.49\textwidth}
+  \includegraphics[width=\textwidth]{plots/limits/T6bblledge_70_GeV_Edge_Endcap_syst_err.pdf}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
+\includegraphics[width=\textwidth]{plots/limits/T6bbllslepton_m_n_1_100_Barrel_syst_err_Reweighted.pdf}
+\end{minipage}
+\caption{Systematic uncertainty on the signal yield in the central signal region in the $m_{\sbottom}$-$m_{\secondchi}$ plane for the fixed-edge (left) and slepton-edge (right) model.}
+\label{fig:sys}
+\end{figure}
+\subsection{Statistical interpretation}
+The results of the counting experiment are translated into exclusion limits by testing the compatibility of the signal plus background ($s+b$) and background only ($b$) hypothesis, treating each signal point in the parameter scans as a separate signal hypothesis. For this purpose, a likelihood function is defined~\cite{HiggsTool1}
+\begin{equation}
+\mathcal{L}(data|\mu,\theta) = \text{Poisson}(data|\mu\cdot s(\theta) + b(\theta))\cdot p(\tilde{\theta}|\theta),
+\end{equation}
+where $\mu$ is a signal strength parameter, $\mu = 0$ corresponding to the background only hypothesis and $\mu > 0$ to the  $s+b$ hypothesis, and $p(\tilde{\theta}|\theta)$ parametrizes the nuisance parameters $\theta$, with $\tilde{\theta}$ being the nominal value of these parameters. Based on these likelihoods, a test statistic is defined utilizing a profile likelihood ratio: 
+\begin{equation}
+\tilde{q_{\mu}} = -2 ln\frac{\mathcal{L}(data|\mu,\hat{\theta}_\mu)}{\mathcal{L}(data|\hat{\mu},\hat{\theta})},
+\end{equation}
+where the $\hat{\theta}_\mu$ represent the maximum likelihood estimators for the nuisance parameters for a given $\mu$, whereas $\hat{\mu}$ and $\hat{\theta}$ indicate the global maximum of the likelihood. The likelihoods themselves consist of a poisson distribution multiplied by some parametrization of the nuisance parameters. The distribution of the test statistics is then sampled dicing pseudo-experiments for some $\mu > 0$ and $\mu = 0$, representing the $s+b$ and $b$ hypotheses that are tested. The p-values $p_{s+b}$ and $p_{b}$ are defined as the probability to obtain a value of the test statistics as large or larger than the one observed in data for the given hypothesis. To obtain an upper limit on the signal cross section the value of $\mu$ is chosen where $\mathrm{CL}_{\mathrm{s}} = \frac{p_{s+b}}{p_b}$ equals 0.05, corresponding to a 95\% confidence level (CL). In the calculation, all six bins of the counting experiment are combined. Nuisance parameters are modelled with log-normal distributions and all uncertainties are assumed to be uncorrelated among each other but fully correlated among the different bins.
+
+The resulting exclusion limits are shown in Figure~\ref{fig:limits}. The left plot shows the exclusion limit in the $m_{\sbottom}$-$m_{\secondchi}$ plane for the fixed-edge model. As this model is specifically tuned to provide signals consistent with the excess observed in the low-mass central signal region, the observed limits deviates from the expected one by about $\unit{75}{\giga\electronvolt}$. Given the assumption of this model, \sbottom masses up to about $\unit{375}{\giga\electronvolt}$ are excluded, depending on the mass of the \secondchi. 
+\begin{figure}[htbp]
+\centering
+\begin{minipage}[t]{0.49\textwidth}
+  \includegraphics[width=\textwidth]{plots/limits/Fixed_Edge_sbottom_neutralino2_Exclusion_witXsecLimit.pdf}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
+\includegraphics[width=\textwidth]{plots/limits/Fixed_Neutralino_sbottom_neutralino2_Exclusion_witXsecLimit.pdf}
+\end{minipage}
+\caption{Exclusion limits in the $m_{\sbottom}$-$m_{\secondchi}$ plane for the fixed-edge (left) and slepton-edge (right) model. For each signal point the upper cross section limit is shown colour coded. The intersection of the theoretical with the excluded cross section is shown as a solid black line, with every signal point to the left and below the curve being excluded. The $1-\sigma$ uncertainty interval on the observed limit is shown as dotted black lines. The expected limit together with the $1-$ and $2-\sigma$ interval are shown as brownish solid and dashed lines.}
+\label{fig:limits}
+\end{figure}
